--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <h2>My <br> VideoMusic</h2>
                         </div>
                     </div>
-                    <<div class="col-md-7 offset-sm-1">
+                    <div class="col-md-7 offset-sm-1">
                         <div class="live_stareams_slide owl-carousel">
                             <div class="live_stareams_slide_img">
                                 <img src="img/live_streams_1.png" alt="">
