--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <p>MyRadioGT Online nacio con el fin
                                 de llevar una programación de
                                 calidad con la cual la audiencia pudiera identificarse.
-                                Teniendo al frente a una persona con conocimientos aplios
+                                Teniendo al frente a una persona con conocimientos amplios
                                 en musica y que conoce de primera mano todo lo que a la gente le gusta,
                                 MyRadioGT Online se caracteriza por ofrecer a la audiencia una seleccion precisa
                                 de música basado en años de experiencia en un mercado tan competitivo como lo es el musical. </p>
